--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>First Development/Deploy - .NET Core 3.1 MVC - Azure(WebAppServices) - Autor: Pintos Julio.</p>
+    <p>Development/Deploy/Publish - © Microsoft .NET Core MVC - Azure(AppServices)/GitHub(Actions) - Autor: Pintos Julio.</p>
 </div>
